# event-manager-telegram-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build_and_deploy_container.yml  clear_releases.yml  deliver_docker_container.yml  deploy_container.yml  frontend_deploy.yml  lint_and_test.yml  merge-gatekeeper.yml  prepare_hosts.yml  rust.yml  rust_create_prerelease.yml  rust_create_release.yml
cfg/: event-manager-telegram-bot.toml
entity/: Cargo.toml
entity/src/: attachment.rs  black_list.rs  current_events.rs  event.rs  group_leader.rs  lib.rs  message.rs  message_outbox.rs  message_sent.rs  prelude.rs  presence.rs  reservation.rs
entity/src/new_types/: event_state.rs  message_type.rs  mod.rs
iaac/ansible/inventory/: inventory.yml
iaac/ansible/inventory/all/: inventory.yml
iaac/ansible/inventory/all/group_vars/: docker_compose_latest.yml  docker_compose_prerelease.yml  main.yml
iaac/ansible/inventory/group_vars/: main.yml  prerelease.yml
iaac/ansible/playbooks/: docker-compose.yml  frontend.yml  prepare_hosts.yml
iaac/ansible/playbooks/templates/: docker-compose-backend.yml.j2  docker-compose-db.yml.j2  docker-compose.yml.j2  event-manager-telegram-bot.toml.j2
iaac/ansible/roles/: requirements.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_events.rs  m20230630_160516_reservations.rs  m20230702_083517_attachments.rs  m20230702_090131_black_list.rs  m20230702_091206_presence.rs  m20230702_092352_group_leaders.rs  m20230702_094319_messages.rs  m20230702_102051_message_outbox.rs  m20230702_102526_message_sent.rs  m20230702_110028_current_events.rs
src/: admin_message_handler.rs  app_errors.rs  configuration.rs  crypto_bindings.rs  db.rs  format.rs  main.rs  message_handler.rs  messages.rs  payments.rs  reply.rs  set_up_logger.rs  types.rs  util.rs
src/api/: event_scope.rs  mod.rs  shared.rs
src/api/controllers/event/: create_event.rs  db.rs  event_list.rs  get_event.rs  mod.rs  remove_event.rs  types.rs  update_event.rs
src/api/middlewares/: auth.rs  cors.rs  log_request_time.rs  mod.rs
src/api/services/: event.rs  message.rs  message_outbox.rs  message_sent.rs  mod.rs  reservation.rs
src/api/services/event/: create_event.rs  db.rs  event_list.rs  get_event.rs  mod.rs  types.rs  update_event.rs
src/api/services/user/: login.rs  mod.rs  types.rs
src/api/shared/: internal_server_error.rs  json_response.rs  mod.rs  response_error.rs  validation_error.rs
src/api/utils/: json_responce.rs  mod.rs  to_http_error.rs  validation_error_to_http.rs
src/background_task/: mod.rs  send_notifications.rs
src/bot/: admin_endpoint.rs  callback_list.rs  mod.rs  reply.rs  updates_handler.rs  user_endpoint.rs
src/configuration/: config.rs  mod.rs  raw_config.rs
src/db/: tests.rs
