[package]
name = "event-manager-telegram-bot"
version = "0.0.1"
authors = ["vadim.frolov@thank-u.org"]
edition = "2021"

[[bin]]
name = "event-manager-telegram-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.73", features = ["preserve_order"] }
clap = { version = "4.3.0", features = ["derive"] }
toml = "0.7.6"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
fallible-streaming-iterator = "0.1.9"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.4.0"
teloxide = { version = "0.12.2", default-features = false, features = ["rustls", "auto-send", "ctrlc_handler"] }
chrono = { version = "0.4", features = ["serde"] }
serde_compact = "1.0.0-rc.3"
url = "2.3.1"
actix-web = "4.3.1"
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.40"
regex = "1.8.3"
actix-cors = "0.6.4"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid", "debug-print"] }
migration = { path = "./migration" }
entity = { path = "./entity" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = { version = "0.7", features = ["emit_event_on_error"]}

[workspace]
members = [".", "migration", "entity"]
