[package]
name = "event-manager-telegram-bot"
version = "0.0.1"
authors = ["vadim.frolov@thank-u.org"]
edition = "2021"

[[bin]]
name = "event-manager-telegram-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.73", features = ["preserve_order"] }
clap = { version = "4.3.0", features = ["derive"] }
toml = "0.5.8"
deadpool = "0.8"
deadpool-postgres = "0.9"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros","full"] }
tokio-postgres = "0.7.2"
fallible-streaming-iterator = "0.1.9"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
r2d2_sqlite = "0.20.0"
r2d2 = "0.8"
teloxide = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde_compact = { version = "1.0.0-rc.3" }
url = "2.3.1"
actix-web = "4.3.1"
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.40"
regex = "1.8.3"
actix-cors = "0.6.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = { version = "0.7", features = ["emit_event_on_error"]}
